fixed letter spacing

--- a/src/css/stylesheet.scss
+++ b/src/css/stylesheet.scss
@@ -25,7 +25,7 @@ body {
 	font-family: 'Questrial', sans-serif;
 
 	.title {
-		letter-spacing: 8px;
+		letter-spacing: 12px;
 		font-size: 3rem;
 	}
 
